--- a/common-css/style-common.css
+++ b/common-css/style-common.css
@@ -1,12 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap");
-
 body {
-  padding: 30px;
+  padding: 100px 30px;
   background-color: #001B3D;
 }
 
-h1 {
+h1, h2, h3, h4, h5 {
   font-family: "Amatic SC", cursive;
   color: #E1F2F7;
 }
@@ -14,5 +13,20 @@ h1 {
 p {
   font-family: "Amatic SC", cursive;
   color: #E1F2F7;
+}
+
+.navbar-brand {
+  padding-left: 30px;
+}
+
+.navbar-expand-lg .navbar-nav .nav-link {
+  padding: 25px;
+  color: #E1F2F7;
+  font-size: 30px;
+}
+
+.nav-link:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 /*# sourceMappingURL=style-common.css.map */
