--- a/landing-page/style-index.css
+++ b/landing-page/style-index.css
@@ -1,2 +1,38 @@
 @import '/common-css/style-common.css';
 
+
+body{
+    padding: 0;
+    margin: 0;
+}
+
+h1{
+    font-size: 80px;
+}
+.cross{
+    text-decoration: line-through;
+}
+
+/*image landing*/
+#container-bg{
+    background-image: url("img/norman-tsui-KBKHXjhVQVM-unsplash.jpg");
+    
+    background-size: cover;
+    background-attachment: fixed; 
+    height: 100vh;
+    width: 100%;
+}
+
+.content-wrapper{
+    margin: 0 auto;
+    width: 60%;
+    text-align: center;
+    position: relative;
+    top:30%;
+}
+
+
+.drag{
+    height: 100vh;
+}
+
