Build basic structure for landing page

--- a/common-css/style-common.css
+++ b/common-css/style-common.css
@@ -11,7 +11,7 @@ h1, h2, h3, h4, h5 {
 }
 
 p {
-  font-family: "Amatic SC", cursive;
+  font-family: "Open Sans Condensed", sans-serif;
   color: #E1F2F7;
 }
 
