--- a/landing-page/style-index.css
+++ b/landing-page/style-index.css
@@ -7,32 +7,171 @@ body{
 }
 
 h1{
-    font-size: 80px;
+    font-size: 50px;
 }
-.cross{
-    text-decoration: line-through;
+p{
+    font-size: 25px;
+}
+i{
+    font-size: 35px;
+}
+a{
+    text-decoration: none;
 }
 
-/*image landing*/
-#container-bg{
-    background-image: url("img/norman-tsui-KBKHXjhVQVM-unsplash.jpg");
-    
-    background-size: cover;
-    background-attachment: fixed; 
+
+
+
+
+.landingsection{  
+    height: 95vh;
+    display: grid;
+    width: 70%;
+    margin: auto;
+    padding-top: 120px;
+    grid-template-columns: repeat(auto-fit, minmax(50%, 1fr));
+    grid-template-rows:90%; 
+}
+
+.landingsection img{
+    width: 300px;
+    justify-self: center;
+    align-self: center;
+    transform: rotate(10deg);
+}
+
+.landingsection-text{
+    justify-self: center;
+    align-self: center;
+    text-align: center;
+}
+
+.landingsection i{
+    color: #E1F2F7;
+}
+
+.landingsection p{
+    padding: 30px;
+}
+
+.christ{
+    font-size: 70px;
+    font-weight: 700;
+}
+
+.cross{
+    position: relative;
+  }
+.cross::after{
+    content: ' ';
+    position: absolute;
+    top: 50%;
+    left: 0;
+    border-radius: 8px;
+    width: 100%;
+    height: 5px;
+    background: #E1F2F7;
+    animation: strike 3s 1;
+}
+
+@keyframes strike{
+    0%   { width : 0; }
+    100% { width: 100%; }
+  }
+
+
+/* DRAG & DROP GAME start here */
+
+#game{
     height: 100vh;
     width: 100%;
+    background-color: #E1F2F7;
+    border-radius: 30px 30px 0 0;
+    display: grid;
+    padding: 15%;
+    margin: auto;
+    padding-top: 200px;
+    grid-template-columns:40% 50% 10%;
+    grid-template-rows: 30% 70%;   
 }
-
-.content-wrapper{
-    margin: 0 auto;
-    width: 60%;
+#game h3, #game p{
+    color: #001B3D;
+    padding: 30px;
+}
+#game h3{
+    font-size: 40px;
+    font-weight: 700; 
+}
+#game img{
+    justify-self: center;
+}
+.game-text{
+    justify-self: center;
+    align-self: center;
     text-align: center;
-    position: relative;
-    top:30%;
+    grid-column: 2/3;
+    grid-row: 2/3; 
+}
+.link-game{
+    border: 1px solid #001B3D;
+    padding: 5px 10px;
+}
+.game-small-icon{
+    width: 80px;
+    align-self: end;
+    grid-column: 3/4;
+}
+.game-image{
+    width: 300px;
+    grid-row: 2/3;
+    grid-column: 1/2;
 }
 
 
-.drag{
+/* running game start */
+
+#game-even{
     height: 100vh;
+    width: 100%;
+    background-color: #B7D4FC;
+    border-radius: 30px 30px 0 0;
+    display: grid;
+    padding: 15%;
+    margin: auto;
+    padding-top: 200px;
+    grid-template-columns:10% 50% 40%;
+    grid-template-rows: 30% 70%;   
+}
+#game-even h3, #game-even p{
+    color: #001B3D;
+    padding: 30px;
+}
+#game-even h3{
+    font-size: 40px;
+    font-weight: 700; 
+}
+#game-even img{
+    justify-self: center;
+}
+.game-text-even{
+    justify-self: center;
+    align-self: center;
+    text-align: center;
+    grid-column: 2/3;
+    grid-row: 2/3; 
+}
+.link-game-even{
+    border: 1px solid #001B3D;
+    padding: 5px 10px;
+}
+.game-small-icon-even{
+    width: 80px;
+    align-self: end;
+    
+}
+.game-image-even{
+    width: 300px;
+    grid-row: 2/3;
+    grid-column: 3/4;
 }
 
