--- a/landing-page/style-index.css
+++ b/landing-page/style-index.css
@@ -1,6 +1,12 @@
 @import '/common-css/style-common.css';
 
 
+#test{
+    height: 100vh;
+    background-color: white;
+}
+
+
 body{
     padding: 0;
     margin: 0;
@@ -17,11 +23,47 @@ i{
 }
 a{
     text-decoration: none;
+    
 }
 
+/* snow effect start */
+.svg-snowscene {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+  }
+  .snow {
+    fill: #fff; 
+    animation-name: snowing;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-out;
+  }
+  .snow:nth-child(2n){
+      animation-delay: 1.5s;
+    }
+.snow:nth-child(3n){
+      animation-delay: 2.3s;
+      animation-duration: 3.3s;
+    }
+    .snow:nth-child(4n){
+      animation-delay: 0.8s;
+      animation-duration: 3.2s;
+    }
+    .snow:nth-child(5n){
+      animation-delay: 2.8s;
+    }
+  
+  
+  @keyframes snowing {
+    0%{ fill-opacity: 1; }
+    100% { 
+      fill-opacity: 0;
+      transform: translateY(100%);
+    }
+  }
 
-
-
+/* landing page start */
 
 .landingsection{  
     height: 95vh;
@@ -53,6 +95,10 @@ a{
 .landingsection p{
     padding: 30px;
 }
+.landingsection a{
+    z-index: 1;
+    position: absolute;
+}
 
 .christ{
     font-size: 70px;
@@ -83,14 +129,14 @@ a{
 /* DRAG & DROP GAME start here */
 
 #game{
-    height: 100vh;
+    height: 90vh;
     width: 100%;
     background-color: #E1F2F7;
     border-radius: 30px 30px 0 0;
     display: grid;
-    padding: 15%;
+    padding: 100px;
     margin: auto;
-    padding-top: 200px;
+    
     grid-template-columns:40% 50% 10%;
     grid-template-rows: 30% 70%;   
 }
@@ -138,7 +184,7 @@ a{
     display: grid;
     padding: 15%;
     margin: auto;
-    padding-top: 200px;
+    padding: 100px;
     grid-template-columns:10% 50% 40%;
     grid-template-rows: 30% 70%;   
 }
