--- a/landing-page/style-index.css
+++ b/landing-page/style-index.css
@@ -1,10 +1,6 @@
 @import '/common-css/style-common.css';
 
 
-#test{
-    height: 100vh;
-    background-color: white;
-}
 
 
 body{
@@ -20,6 +16,7 @@ p{
 }
 i{
     font-size: 35px;
+    color: #001B3D;
 }
 a{
     text-decoration: none;
@@ -152,12 +149,21 @@ a{
     justify-self: center;
 }
 .game-text{
+    opacity: 0;
+    transform: translateY(20px);
+    transition: 0.6s all ease-in-out;
+
     justify-self: center;
     align-self: center;
     text-align: center;
     grid-column: 2/3;
     grid-row: 2/3; 
 }
+.game-text-appear{
+    opacity: 1;
+    transform: translateY(0px);
+}
+
 .link-game{
     border: 1px solid #001B3D;
     padding: 5px 10px;
@@ -176,10 +182,10 @@ a{
 
 /* running game start */
 
-#game-even{
+#game-two{
     height: 100vh;
     width: 100%;
-    background-color: #B7D4FC;
+    background-color: #F5D3A0;
     border-radius: 30px 30px 0 0;
     display: grid;
     padding: 15%;
@@ -188,34 +194,45 @@ a{
     grid-template-columns:10% 50% 40%;
     grid-template-rows: 30% 70%;   
 }
-#game-even h3, #game-even p{
+#game-two h3, #game-two p{
     color: #001B3D;
     padding: 30px;
 }
-#game-even h3{
+#game-two h3{
     font-size: 40px;
     font-weight: 700; 
 }
-#game-even img{
+#game-two img{
     justify-self: center;
 }
-.game-text-even{
+.game-text-two{
+
+    opacity: 0;
+    transform: translateY(30px);
+    transition: 0.6s all ease-in-out;
+    
     justify-self: center;
     align-self: center;
     text-align: center;
     grid-column: 2/3;
     grid-row: 2/3; 
 }
-.link-game-even{
+
+.game-text-two-appear{
+    opacity: 1;
+    transform: translateY(0px);
+}
+
+.link-game-two{
     border: 1px solid #001B3D;
     padding: 5px 10px;
 }
-.game-small-icon-even{
+.game-small-icon-two{
     width: 80px;
     align-self: end;
     
 }
-.game-image-even{
+.game-image-two{
     width: 300px;
     grid-row: 2/3;
     grid-column: 3/4;
