--- a/common-css/style-common.css
+++ b/common-css/style-common.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap");
-
 body {
   padding: 100px 30px;
   background-color: #001B3D;
@@ -9,6 +8,7 @@ body {
 h1, h2, h3, h4, h5 {
   font-family: "Amatic SC", cursive;
   color: #E1F2F7;
+  font-size: 80px;
 }
 
 p {
