--- a/landing-page/style-index.css
+++ b/landing-page/style-index.css
@@ -8,7 +8,6 @@ body {
 h1, h2, h3, h4, h5 {
   font-family: "Amatic SC", cursive;
   color: #E1F2F7;
-  font-size: 80px;
 }
 
 p {
@@ -30,5 +29,502 @@ p {
 .nav-link:hover {
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
+}
+
+body {
+  padding: 0;
+  margin: 0;
+}
+
+h1 {
+  font-size: 50px;
+}
+
+p {
+  font-size: 25px;
+}
+
+i {
+  font-size: 35px;
+}
+
+a {
+  text-decoration: none;
+}
+
+/* snow effect start */
+.svg-snowscene {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+}
+
+.snow {
+  fill: #fff;
+  -webkit-animation-name: snowing;
+          animation-name: snowing;
+  -webkit-animation-duration: 5s;
+          animation-duration: 5s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-timing-function: ease-out;
+          animation-timing-function: ease-out;
+}
+
+.snow:nth-child(2n) {
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
+}
+
+.snow:nth-child(3n) {
+  -webkit-animation-delay: 2.3s;
+          animation-delay: 2.3s;
+  -webkit-animation-duration: 3.3s;
+          animation-duration: 3.3s;
+}
+
+.snow:nth-child(4n) {
+  -webkit-animation-delay: 0.8s;
+          animation-delay: 0.8s;
+  -webkit-animation-duration: 3.2s;
+          animation-duration: 3.2s;
+}
+
+.snow:nth-child(5n) {
+  -webkit-animation-delay: 2.8s;
+          animation-delay: 2.8s;
+}
+
+@-webkit-keyframes snowing {
+  0% {
+    fill-opacity: 1;
+  }
+  100% {
+    fill-opacity: 0;
+    -webkit-transform: translateY(100%);
+            transform: translateY(100%);
+  }
+}
+
+@keyframes snowing {
+  0% {
+    fill-opacity: 1;
+  }
+  100% {
+    fill-opacity: 0;
+    -webkit-transform: translateY(100%);
+            transform: translateY(100%);
+  }
+}
+
+/* landing page start */
+.landingsection {
+  height: 95vh;
+  display: -ms-grid;
+  display: grid;
+  width: 70%;
+  margin: auto;
+  padding-top: 120px;
+  -ms-grid-columns: (minmax(50%, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(50%, 1fr));
+  -ms-grid-rows: 90%;
+      grid-template-rows: 90%;
+}
+
+.landingsection img {
+  width: 300px;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  -webkit-transform: rotate(10deg);
+          transform: rotate(10deg);
+}
+
+.landingsection-text {
+  -ms-grid-column-align: center;
+      justify-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  text-align: center;
+}
+
+.landingsection i {
+  color: #E1F2F7;
+}
+
+.landingsection p {
+  padding: 30px;
+}
+
+.landingsection a {
+  z-index: 1;
+  position: absolute;
+}
+
+.christ {
+  font-size: 70px;
+  font-weight: 700;
+}
+
+.cross {
+  position: relative;
+}
+
+.cross::after {
+  content: ' ';
+  position: absolute;
+  top: 50%;
+  left: 0;
+  border-radius: 8px;
+  width: 100%;
+  height: 5px;
+  background: #E1F2F7;
+  -webkit-animation: strike 3s 1;
+          animation: strike 3s 1;
+}
+
+@-webkit-keyframes strike {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+@keyframes strike {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+/* DRAG & DROP GAME start here */
+#game {
+  height: 90vh;
+  width: 70%;
+  background-color: #E1F2F7;
+  border-radius: 30px 30px 0 0;
+  display: -ms-grid;
+  display: grid;
+  padding: 100px;
+  margin: auto;
+  -ms-grid-columns: 40% 50% 10%;
+      grid-template-columns: 40% 50% 10%;
+  -ms-grid-rows: 30% 70%;
+      grid-template-rows: 30% 70%;
+}
+
+#game h3, #game p {
+  color: #001B3D;
+  padding: 30px;
+}
+
+#game h3 {
+  font-size: 40px;
+  font-weight: 700;
+}
+
+#game img {
+  -ms-grid-column-align: center;
+      justify-self: center;
+}
+
+.game-text {
+  opacity: 1;
+  -webkit-transform: translateY(30px);
+          transform: translateY(30px);
+  -webkit-transition: 0.6s all ease-in-out;
+  transition: 0.6s all ease-in-out;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  text-align: center;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
+}
+
+.game-text-appear {
+  opacity: 1;
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
+}
+
+.link-game {
+  border: 1px solid #001B3D;
+  padding: 5px 10px;
+}
+
+.game-small-icon {
+  width: 80px;
+  -ms-flex-item-align: end;
+      -ms-grid-row-align: end;
+      align-self: end;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3/4;
+}
+
+.game-image {
+  width: 300px;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+}
+
+/* running game start */
+#game-two {
+  height: 100vh;
+  width: 70%;
+  background-color: #F5D3A0;
+  border-radius: 30px 30px 0 0;
+  display: -ms-grid;
+  display: grid;
+  padding: 15%;
+  margin: auto;
+  padding: 100px;
+  -ms-grid-columns: 10% 50% 40%;
+      grid-template-columns: 10% 50% 40%;
+  -ms-grid-rows: 30% 70%;
+      grid-template-rows: 30% 70%;
+}
+
+#game-two h3, #game-two p {
+  color: #001B3D;
+  padding: 30px;
+}
+
+#game-two h3 {
+  font-size: 40px;
+  font-weight: 700;
+}
+
+#game-two img {
+  -ms-grid-column-align: center;
+      justify-self: center;
+}
+
+.game-text-two {
+  opacity: 0;
+  -webkit-transform: translateY(30px);
+          transform: translateY(30px);
+  -webkit-transition: 0.6s all ease-in-out;
+  transition: 0.6s all ease-in-out;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  text-align: center;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
+}
+
+.game-text-two-appear {
+  opacity: 1;
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
+}
+
+.link-game-two {
+  border: 1px solid #001B3D;
+  padding: 5px 10px;
+}
+
+.game-small-icon-two {
+  width: 80px;
+  -ms-flex-item-align: end;
+      -ms-grid-row-align: end;
+      align-self: end;
+}
+
+.game-image-two {
+  width: 300px;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3/4;
+}
+
+/* gift generator start here */
+#game-three {
+  height: 90vh;
+  width: 70%;
+  background-color: #E1F2F7;
+  border-radius: 30px 30px 0 0;
+  display: -ms-grid;
+  display: grid;
+  padding: 100px;
+  margin: auto;
+  -ms-grid-columns: 40% 50% 10%;
+      grid-template-columns: 40% 50% 10%;
+  -ms-grid-rows: 30% 70%;
+      grid-template-rows: 30% 70%;
+}
+
+#game-three h3, #game-three p {
+  color: #001B3D;
+  padding: 30px;
+}
+
+#game-three h3 {
+  font-size: 40px;
+  font-weight: 700;
+}
+
+#game-three img {
+  -ms-grid-column-align: center;
+      justify-self: center;
+}
+
+.game-text-three {
+  opacity: 1;
+  -webkit-transform: translateY(30px);
+          transform: translateY(30px);
+  -webkit-transition: 0.6s all ease-in-out;
+  transition: 0.6s all ease-in-out;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  text-align: center;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
+}
+
+.game-text-three-appear {
+  opacity: 1;
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
+}
+
+.link-game-three {
+  border: 1px solid #001B3D;
+  padding: 5px 10px;
+}
+
+.game-small-icon-three {
+  width: 80px;
+  -ms-flex-item-align: end;
+      -ms-grid-row-align: end;
+      align-self: end;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3/4;
+}
+
+.game-image-three {
+  width: 300px;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+}
+
+/* bingo start */
+#game-four {
+  height: 100vh;
+  width: 70%;
+  background-color: #F5D3A0;
+  border-radius: 30px 30px 0 0;
+  display: -ms-grid;
+  display: grid;
+  padding: 15%;
+  margin: auto;
+  padding: 100px;
+  -ms-grid-columns: 10% 50% 40%;
+      grid-template-columns: 10% 50% 40%;
+  -ms-grid-rows: 30% 70%;
+      grid-template-rows: 30% 70%;
+}
+
+#game-four h3, #game-four p {
+  color: #001B3D;
+  padding: 30px;
+}
+
+#game-four h3 {
+  font-size: 40px;
+  font-weight: 700;
+}
+
+#game-four img {
+  -ms-grid-column-align: center;
+      justify-self: center;
+}
+
+.game-text-four {
+  opacity: 0;
+  -webkit-transform: translateY(30px);
+          transform: translateY(30px);
+  -webkit-transition: 0.6s all ease-in-out;
+  transition: 0.6s all ease-in-out;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  text-align: center;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
+}
+
+.game-text-four-appear {
+  opacity: 1;
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
+}
+
+.link-game-four {
+  border: 1px solid #001B3D;
+  padding: 5px 10px;
+}
+
+.game-small-icon-four {
+  width: 80px;
+  -ms-flex-item-align: end;
+      -ms-grid-row-align: end;
+      align-self: end;
+}
+
+.game-image-four {
+  width: 300px;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3/4;
 }
 /*# sourceMappingURL=style-index.css.map */
