Change background color for sections/landingpage

--- a/landing-page/style-index.css
+++ b/landing-page/style-index.css
@@ -208,20 +208,21 @@ a {
 #game {
   height: 90vh;
   width: 70%;
-  background-color: #E1F2F7;
+  background-color: #001B3D;
   border-radius: 30px 30px 0 0;
   display: -ms-grid;
   display: grid;
   padding: 100px;
   margin: auto;
+  grid-gap: 20px;
   -ms-grid-columns: 40% 50% 10%;
       grid-template-columns: 40% 50% 10%;
-  -ms-grid-rows: 30% 70%;
-      grid-template-rows: 30% 70%;
+  -ms-grid-rows: 10% 90%;
+      grid-template-rows: 10% 90%;
 }
 
 #game h3, #game p {
-  color: #001B3D;
+  color: #E1F2F7;
   padding: 30px;
 }
 
@@ -241,6 +242,7 @@ a {
           transform: translateY(30px);
   -webkit-transition: 0.6s all ease-in-out;
   transition: 0.6s all ease-in-out;
+  padding-left: 40px;
   -ms-grid-column-align: center;
       justify-self: center;
   -ms-flex-item-align: center;
@@ -262,7 +264,7 @@ a {
 }
 
 .link-game {
-  border: 1px solid #001B3D;
+  border: 1px solid #E1F2F7;
   padding: 5px 10px;
 }
 
@@ -290,7 +292,7 @@ a {
 #game-two {
   height: 100vh;
   width: 70%;
-  background-color: #F5D3A0;
+  background-color: #B7D4FC;
   border-radius: 30px 30px 0 0;
   display: -ms-grid;
   display: grid;
@@ -299,8 +301,8 @@ a {
   padding: 100px;
   -ms-grid-columns: 10% 50% 40%;
       grid-template-columns: 10% 50% 40%;
-  -ms-grid-rows: 30% 70%;
-      grid-template-rows: 30% 70%;
+  -ms-grid-rows: 10% 90%;
+      grid-template-rows: 10% 90%;
 }
 
 #game-two h3, #game-two p {
@@ -324,6 +326,7 @@ a {
           transform: translateY(30px);
   -webkit-transition: 0.6s all ease-in-out;
   transition: 0.6s all ease-in-out;
+  padding-right: 40px;
   -ms-grid-column-align: center;
       justify-self: center;
   -ms-flex-item-align: center;
@@ -370,7 +373,7 @@ a {
 #game-three {
   height: 90vh;
   width: 70%;
-  background-color: #E1F2F7;
+  background-color: #001B3D;
   border-radius: 30px 30px 0 0;
   display: -ms-grid;
   display: grid;
@@ -378,12 +381,12 @@ a {
   margin: auto;
   -ms-grid-columns: 40% 50% 10%;
       grid-template-columns: 40% 50% 10%;
-  -ms-grid-rows: 30% 70%;
-      grid-template-rows: 30% 70%;
+  -ms-grid-rows: 10% 90%;
+      grid-template-rows: 10% 90%;
 }
 
 #game-three h3, #game-three p {
-  color: #001B3D;
+  color: #E1F2F7;
   padding: 30px;
 }
 
@@ -403,6 +406,7 @@ a {
           transform: translateY(30px);
   -webkit-transition: 0.6s all ease-in-out;
   transition: 0.6s all ease-in-out;
+  padding-left: 40px;
   -ms-grid-column-align: center;
       justify-self: center;
   -ms-flex-item-align: center;
@@ -424,7 +428,7 @@ a {
 }
 
 .link-game-three {
-  border: 1px solid #001B3D;
+  border: 1px solid #E1F2F7;
   padding: 5px 10px;
 }
 
@@ -452,7 +456,7 @@ a {
 #game-four {
   height: 100vh;
   width: 70%;
-  background-color: #F5D3A0;
+  background-color: #B7D4FC;
   border-radius: 30px 30px 0 0;
   display: -ms-grid;
   display: grid;
@@ -461,8 +465,8 @@ a {
   padding: 100px;
   -ms-grid-columns: 10% 50% 40%;
       grid-template-columns: 10% 50% 40%;
-  -ms-grid-rows: 30% 70%;
-      grid-template-rows: 30% 70%;
+  -ms-grid-rows: 10% 90%;
+      grid-template-rows: 10% 90%;
 }
 
 #game-four h3, #game-four p {
@@ -486,6 +490,7 @@ a {
           transform: translateY(30px);
   -webkit-transition: 0.6s all ease-in-out;
   transition: 0.6s all ease-in-out;
+  padding-right: 40px;
   -ms-grid-column-align: center;
       justify-self: center;
   -ms-flex-item-align: center;
