--- a/landing-page/style-index.scss
+++ b/landing-page/style-index.scss
@@ -1,5 +1,6 @@
 @import "../common-css/style-common.scss";
 
+
 body{
     padding: 0;
     margin: 0;
@@ -124,17 +125,18 @@ a{
 #game{
     height: 90vh;
     width: 70%;
-    background-color: #E1F2F7;
+    background-color: $darkblue;
     border-radius: 30px 30px 0 0;
     display: grid;
     padding: 100px;
     margin: auto;
-    
+    grid-gap:20px;
     grid-template-columns:40% 50% 10%;
-    grid-template-rows: 30% 70%;   
+    grid-template-rows: 10% 90%;   
+ 
 }
 #game h3, #game p{
-    color: #001B3D;
+    color: $silverblue;
     padding: 30px;
 }
 #game h3{
@@ -146,22 +148,24 @@ a{
 }
 .game-text{
 
+
     opacity: 1;
     transform: translateY(30px);
     transition: 0.6s all ease-in-out;
-
+    padding-left: 40px;
     justify-self: center;
     align-self: center;
     text-align: center;
     grid-column: 2/3;
     grid-row: 2/3; 
 }
+
 .game-text-appear{
     opacity: 1;
     transform: translateY(0px);
 }
 .link-game{
-    border: 1px solid #001B3D;
+    border: 1px solid $silverblue;
     padding: 5px 10px;
 }
 .game-small-icon{
@@ -182,14 +186,14 @@ a{
 #game-two{
     height: 100vh;
     width: 70%;
-    background-color: #F5D3A0;
+    background-color: $medblue;
     border-radius: 30px 30px 0 0;
     display: grid;
     padding: 15%;
     margin: auto;
     padding: 100px;
     grid-template-columns:10% 50% 40%;
-    grid-template-rows: 30% 70%;   
+    grid-template-rows: 10% 90%;   
 }
 #game-two h3, #game-two p{
     color: #001B3D;
@@ -207,7 +211,8 @@ a{
     opacity: 0;
     transform: translateY(30px);
     transition: 0.6s all ease-in-out;
-    
+    padding-right: 40px;
+
     justify-self: center;
     align-self: center;
     text-align: center;
@@ -240,17 +245,17 @@ a{
 #game-three{
     height: 90vh;
     width: 70%;
-    background-color: #E1F2F7;
+    background-color: $darkblue;
     border-radius: 30px 30px 0 0;
     display: grid;
     padding: 100px;
     margin: auto;
     
     grid-template-columns:40% 50% 10%;
-    grid-template-rows: 30% 70%;   
+    grid-template-rows: 10% 90%;   
 }
 #game-three h3, #game-three p{
-    color: #001B3D;
+    color: $silverblue;
     padding: 30px;
 }
 #game-three h3{
@@ -265,6 +270,7 @@ a{
     opacity: 1;
     transform: translateY(30px);
     transition: 0.6s all ease-in-out;
+    padding-left: 40px;
 
     justify-self: center;
     align-self: center;
@@ -277,7 +283,7 @@ a{
     transform: translateY(0px);
 }
 .link-game-three{
-    border: 1px solid #001B3D;
+    border: 1px solid $silverblue;
     padding: 5px 10px;
 }
 .game-small-icon-three{
@@ -300,14 +306,14 @@ a{
 #game-four{
     height: 100vh;
     width: 70%;
-    background-color: #F5D3A0;
+    background-color: $medblue;
     border-radius: 30px 30px 0 0;
     display: grid;
     padding: 15%;
     margin: auto;
     padding: 100px;
     grid-template-columns:10% 50% 40%;
-    grid-template-rows: 30% 70%;   
+    grid-template-rows: 10% 90%;   
 }
 #game-four h3, #game-four p{
     color: #001B3D;
@@ -325,7 +331,8 @@ a{
     opacity: 0;
     transform: translateY(30px);
     transition: 0.6s all ease-in-out;
-    
+    padding-right: 40px;
+
     justify-self: center;
     align-self: center;
     text-align: center;
