--- a/landing-page/style-index.css
+++ b/landing-page/style-index.css
@@ -169,6 +169,10 @@ a {
   font-weight: 700;
 }
 
+.typing {
+  font-size: 80px;
+}
+
 .cross {
   position: relative;
 }
@@ -238,8 +242,8 @@ a {
 
 .game-text {
   opacity: 1;
-  -webkit-transform: translateY(30px);
-          transform: translateY(30px);
+  -webkit-transform: translateY(50px);
+          transform: translateY(50px);
   -webkit-transition: 0.6s all ease-in-out;
   transition: 0.6s all ease-in-out;
   padding-left: 40px;
@@ -265,7 +269,7 @@ a {
 
 .link-game {
   border: 1px solid #E1F2F7;
-  padding: 5px 10px;
+  border-radius: 8px;
 }
 
 .game-small-icon {
@@ -322,8 +326,8 @@ a {
 
 .game-text-two {
   opacity: 0;
-  -webkit-transform: translateY(30px);
-          transform: translateY(30px);
+  -webkit-transform: translateY(50px);
+          transform: translateY(50px);
   -webkit-transition: 0.6s all ease-in-out;
   transition: 0.6s all ease-in-out;
   padding-right: 40px;
@@ -349,7 +353,7 @@ a {
 
 .link-game-two {
   border: 1px solid #001B3D;
-  padding: 5px 10px;
+  border-radius: 8px;
 }
 
 .game-small-icon-two {
@@ -402,8 +406,8 @@ a {
 
 .game-text-three {
   opacity: 1;
-  -webkit-transform: translateY(30px);
-          transform: translateY(30px);
+  -webkit-transform: translateY(50px);
+          transform: translateY(50px);
   -webkit-transition: 0.6s all ease-in-out;
   transition: 0.6s all ease-in-out;
   padding-left: 40px;
@@ -429,7 +433,7 @@ a {
 
 .link-game-three {
   border: 1px solid #E1F2F7;
-  padding: 5px 10px;
+  border-radius: 8px;
 }
 
 .game-small-icon-three {
@@ -486,8 +490,8 @@ a {
 
 .game-text-four {
   opacity: 0;
-  -webkit-transform: translateY(30px);
-          transform: translateY(30px);
+  -webkit-transform: translateY(50px);
+          transform: translateY(50px);
   -webkit-transition: 0.6s all ease-in-out;
   transition: 0.6s all ease-in-out;
   padding-right: 40px;
@@ -513,7 +517,7 @@ a {
 
 .link-game-four {
   border: 1px solid #001B3D;
-  padding: 5px 10px;
+  border-radius: 8px;
 }
 
 .game-small-icon-four {
