--- a/landing-page/style-index.scss
+++ b/landing-page/style-index.scss
@@ -98,6 +98,9 @@ a{
     font-size: 70px;
     font-weight: 700;
 }
+.typing{
+    font-size: 80px;
+}
 
 .cross{
     position: relative;
@@ -150,7 +153,7 @@ a{
 
 
     opacity: 1;
-    transform: translateY(30px);
+    transform: translateY(50px);
     transition: 0.6s all ease-in-out;
     padding-left: 40px;
     justify-self: center;
@@ -166,7 +169,8 @@ a{
 }
 .link-game{
     border: 1px solid $silverblue;
-    padding: 5px 10px;
+    border-radius: 8px;
+    
 }
 .game-small-icon{
     width: 80px;
@@ -209,7 +213,7 @@ a{
 .game-text-two{
 
     opacity: 0;
-    transform: translateY(30px);
+    transform: translateY(50px);
     transition: 0.6s all ease-in-out;
     padding-right: 40px;
 
@@ -227,7 +231,7 @@ a{
 
 .link-game-two{
     border: 1px solid #001B3D;
-    padding: 5px 10px;
+    border-radius: 8px;
 }
 .game-small-icon-two{
     width: 80px;
@@ -268,7 +272,7 @@ a{
 .game-text-three{
 
     opacity: 1;
-    transform: translateY(30px);
+    transform: translateY(50px);
     transition: 0.6s all ease-in-out;
     padding-left: 40px;
 
@@ -284,7 +288,7 @@ a{
 }
 .link-game-three{
     border: 1px solid $silverblue;
-    padding: 5px 10px;
+    border-radius: 8px;
 }
 .game-small-icon-three{
     width: 80px;
@@ -329,7 +333,7 @@ a{
 .game-text-four{
 
     opacity: 0;
-    transform: translateY(30px);
+    transform: translateY(50px);
     transition: 0.6s all ease-in-out;
     padding-right: 40px;
 
@@ -347,7 +351,7 @@ a{
 
 .link-game-four{
     border: 1px solid #001B3D;
-    padding: 5px 10px;
+    border-radius: 8px;
 }
 .game-small-icon-four{
     width: 80px;
