Add animation frame & clear to keep canvas clear of duplicates per frame

--- a/running-game/css/running-style.css
+++ b/running-game/css/running-style.css
@@ -6,7 +6,7 @@
 }
 
 #gameContainer {
-  height: 500px;
-  width: 700px;
+  height: 80vh;
+  width: 85vw;
 }
 /*# sourceMappingURL=running-style.css.map */
