--- a/gift-generator/gift-style.css
+++ b/gift-generator/gift-style.css
@@ -1,4 +1,39 @@
   
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap");
+
+
+body {
+    padding: 30px;
+  background-color: #001B3D;
+  text-align: center;
+  }
+  
+  h1 {
+    font-family: "Amatic SC", cursive;
+    color: #E1F2F7;
+  }
+  
+  p {
+    font-family: "Amatic SC", cursive;
+    color: #E1F2F7;
+  }
+
+  #myform{
+      padding:10px;
+      margin:10px;
+      font-size:50px;
+  }
+
+  .button{
+    padding:10px;
+    margin:10px;
+    font-size:50px;
+
+
+  }
+
+
 
 
 
