--- a/running-game/css/running-style.scss
+++ b/running-game/css/running-style.scss
@@ -3,8 +3,27 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
 #gameContainer {
     height: 80vh;
     width: 85vw;
-    background-color: yellow;
+    background-color: #001B3D;
+    background-image: url(../assets/bg.png);
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: left bottom;
+}
+.tiles {
+    width: 85vw;
+    height: 4vh;
+    background-color: black;
+    background-image: url(../assets/snowtile.png);
+    background-size: 2vw;
+    background-position: left top;
 }
