--- a/running-game/css/running-style.css
+++ b/running-game/css/running-style.css
@@ -40,4 +40,19 @@ body {
   background-size: 2vw;
   background-position: left top;
 }
+
+.moon {
+  position: absolute;
+  right: 40px;
+  top: 50px;
+  background-image: url(../assets/moon.png);
+  width: 128px;
+  height: 128px;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.container {
+  position: relative;
+}
 /*# sourceMappingURL=running-style.css.map */
