--- a/bingo/style-bingo.css
+++ b/bingo/style-bingo.css
@@ -31,34 +31,24 @@ p {
           transform: scale(1.1);
 }
 
-img {
-  width: 300px;
-}
-
 button {
-  background-color: #D8E8FD;
-  width: 100px;
-  border: none;
-  padding: 20px 20px;
+  border: 2px solid #D8E8FD;
+  outline: none;
+  background: transparent;
+  width: 200px;
+  height: 60px;
+  padding: 10px 20px;
   text-decoration: none;
-  border-radius: 5px;
+  border-radius: 8px;
+  -ms-grid-column-align: center;
+      justify-self: center;
 }
 
 button h3 {
-  color: #001B3D;
+  color: #E1F2F7;
   font-size: 30px;
   font-weight: 800;
   text-align: center;
-}
-
-.computer-card {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
 }
 
 .container {
@@ -66,6 +56,21 @@ button h3 {
   display: grid;
   -ms-grid-columns: 30% 70%;
       grid-template-columns: 30% 70%;
+}
+
+.computer-card {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 70% 30%;
+      grid-template-rows: 70% 30%;
+  padding: 30px;
+  -ms-grid-column-align: center;
+      justify-self: center;
+}
+
+.computer-card img {
+  padding-top: 100px;
+  width: 300px;
 }
 
 .player-card {
