--- a/bingo/style-bingo.scss
+++ b/bingo/style-bingo.scss
@@ -3,7 +3,9 @@
 
 // TODO: responsivess
 
-
+main{
+    padding-top: 100px;
+}
 button{
     border: 2px solid $lightblue;
     outline: none;
@@ -79,26 +81,6 @@ button{
         padding: 5px;
     }
 }
-body{
-    margin: 0;
-    padding: 0px;
-    position: relative;
-  padding-bottom: 250px;
-  min-height: 100vh ;
-
-}
-footer {
- 
-    position: absolute;
-    bottom: 0;
-    width: 100vw;
-    /* position: fixed;
-    z-index: 1; */
-  }
-// .test{
-//     height: 800px;
-//     background-color: darkgoldenrod;
-// }
 
 // animation class(will be add by javascript)
 .run-pumping {
