Add border tileset

--- a/running-game/css/running-style.css
+++ b/running-game/css/running-style.css
@@ -20,6 +20,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   height: 100vh;
+  background-color: #001B3D;
 }
 
 #gameContainer {
