--- a/running-game/css/running-style.scss
+++ b/running-game/css/running-style.scss
@@ -9,6 +9,7 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-color: #001B3D;
 }
 #gameContainer {
     height: 80vh;
