--- a/running-game/css/running-style.css
+++ b/running-game/css/running-style.css
@@ -23,8 +23,41 @@ body {
   background-color: #001B3D;
 }
 
+.border {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  background-color: none;
+  width: 85vw;
+  height: 30px;
+  z-index: 2;
+}
+
+.border .borderleft {
+  height: 30px;
+  width: 50px;
+  background-image: url(../assets/leftBorder.png);
+}
+
+.border .bordermiddle {
+  height: 30px;
+  width: 75vw;
+  background-image: url(../assets/middleBorder.png);
+}
+
+.border .borderright {
+  height: 30px;
+  width: 50px;
+  background-image: url(../assets/rightBorder.png);
+}
+
 #gameContainer {
-  height: 80vh;
+  z-index: -1;
+  height: 65vh;
   width: 85vw;
   background-color: #001B3D;
   background-image: url(../assets/bg.png);
@@ -40,6 +73,7 @@ body {
   background-image: url(../assets/snowtile.png);
   background-size: 2vw;
   background-position: left top;
+  border-radius: 0 0 5px 5px;
 }
 
 .moon {
