--- a/running-game/css/running-style.scss
+++ b/running-game/css/running-style.scss
@@ -10,9 +10,35 @@ body{
     align-items: center;
     height: 100vh;
     background-color: #001B3D;
+    
 }
+.border {
+    display: flex;
+    flex-direction: row;
+    background-color: none;
+    width: 85vw;
+    height: 30px;
+    z-index: 2;
+
+    .borderleft {
+        height: 30px;
+        width: 50px;
+        background-image: url(../assets/leftBorder.png);
+    }
+    .bordermiddle {
+        height: 30px;
+        width: 75vw;
+        background-image: url(../assets/middleBorder.png);
+    }
+    .borderright {
+        height: 30px;
+        width: 50px;
+        background-image: url(../assets/rightBorder.png);
+    }
+ }
 #gameContainer {
-    height: 80vh;
+    z-index: -1;
+    height: 65vh;
     width: 85vw;
     background-color: #001B3D;
     background-image: url(../assets/bg.png);
@@ -27,6 +53,7 @@ body{
     background-image: url(../assets/snowtile.png);
     background-size: 2vw;
     background-position: left top;
+    border-radius: 0 0 5px 5px;
 }
 .moon {
     position: absolute;
