--- a/landing-page/style-index.scss
+++ b/landing-page/style-index.scss
@@ -64,9 +64,8 @@ a{
     display: grid;
     width: 70%;
     margin: auto;
-    padding-top: 120px;
-    grid-template-columns: repeat(auto-fit, minmax(50%, 1fr));
-    grid-template-rows:90%; 
+    grid-template-columns: 80% 20%;
+    
 }
 
 .landingsection img{
