--- a/running-game/css/running-style.scss
+++ b/running-game/css/running-style.scss
@@ -9,7 +9,7 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #001B3D;
+    background-color: red;
     
 }
 .border {
@@ -27,7 +27,7 @@ body{
     }
     .bordermiddle {
         height: 30px;
-        width: 75vw;
+        width: calc(85vw - 100px);
         background-image: url(../assets/middleBorder.png);
     }
     .borderright {
