--- a/running-game/css/running-style.scss
+++ b/running-game/css/running-style.scss
@@ -18,7 +18,7 @@ body{
     background-color: none;
     width: 85vw;
     height: 30px;
-    z-index: 2;
+    
 
     .borderleft {
         height: 30px;
@@ -37,8 +37,8 @@ body{
     }
  }
 #gameContainer {
-    z-index: -1;
-    height: 65vh;
+    
+    height: 70vh;
     width: 85vw;
     background-color: #001B3D;
     background-image: url(../assets/bg.png);
@@ -52,7 +52,7 @@ body{
     background-color: black;
     background-image: url(../assets/snowtile.png);
     background-size: 2vw;
-    background-position: left top;
+    background-position:  left top;
     border-radius: 0 0 5px 5px;
 }
 .moon {
@@ -67,6 +67,8 @@ body{
 }
 .container {
     position: relative;
+    display: flex;
+    flex-direction: column;
 }
 #snow {
     position: fixed;
