--- a/bingo/style-bingo.scss
+++ b/bingo/style-bingo.scss
@@ -5,6 +5,7 @@
 
 main{
     padding-top: 100px;
+    height: 68vh;
 }
 button{
     border: 2px solid $lightblue;
@@ -38,9 +39,37 @@ button{
     padding: 30px;
     justify-self: center;
     img{
-        padding-top: 100px;
-        width: 250px;
+        width: 200px;
     }
+}
+.replay-btn-div{
+    display: none;
+    
+    position: absolute;
+    // background-color: $lightblue;
+    width: 100%; 
+    height: 60%;
+    padding: 0;
+    opacity: .9;
+}
+#replay{
+    position: absolute;
+    top: 40%;
+    border: 2px solid $yellow;
+    height: 300px;
+    width: 300px;
+    background-color: $yellow;
+    border-radius: 50%;
+    right: 40%;
+    z-index: 1;
+    outline: none;   
+    h1{
+        color: $darkblue;
+        font-size: 80px;
+        font-weight: 800;
+        padding: 10px;
+    }
+
 }
 
 .player-card{
@@ -48,6 +77,7 @@ button{
     width: 80%;
     margin:auto;
     padding: 5px;
+    z-index: -1;
 }
 
 .card-title{
@@ -80,6 +110,12 @@ button{
         justify-self: center;
         padding: 5px;
     }
+  
+}
+.card * {
+    height: 116px;
+    width: 116px;
+    background-color: $silverblue;
 }
 
 // animation class(will be add by javascript)
