--- a/running-game/css/running-style.scss
+++ b/running-game/css/running-style.scss
@@ -94,7 +94,7 @@ body {
 }
 
 
-.sound {
+/* .sound {
     display: flex;
     flex-direction: row;
     margin-top: 2vh;
@@ -104,5 +104,6 @@ body {
         background-size: cover;
         width: 25px;
         height: 25px;
+        cursor: pointer;
     }
-}
+}*/
