Canvas resizing issue

--- a/running-game/css/running-style.scss
+++ b/running-game/css/running-style.scss
@@ -10,10 +10,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #001B3D;
-
-
-}
+    background-color: #001B3D;}
 
 .border {
 
