--- a/gift-generator/gift-style.css
+++ b/gift-generator/gift-style.css
@@ -39,7 +39,33 @@ main {
 
 }
 
+#submit {
+    /* font-size: 30px; makes the page shake ? */ 
+    border-radius: 15px;
+}
 
+.collapsible {
+    background-color: #777;
+    color: white;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+  }
+  
+  .collapsible:hover {
+    background-color: #555;
+  }
+  
+  .content {
+    padding: 0 18px;
+    display: none;
+    overflow: hidden;
+    background-color: #f1f1f1;
+  }
 
 
 img[title]{
@@ -75,8 +101,8 @@ p {
 
 @keyframes mysleigh{
    
-    from{transform : translateX(0)}
-    to{transform: translateX(500px)}
+    from{transform : translateY(0)}
+    to{transform: translateY(500px)}
 
 
 }
@@ -90,6 +116,7 @@ p {
   -o-object-fit: contain;
      object-fit: contain;
 }
+
 
 
 
@@ -119,6 +146,7 @@ img[target=one] {
   -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
   top: -20px;
+  height: 60px;
   -webkit-transition: width 2s, height 4s;
   transition: width 2s, height 4s;
   -webkit-animation-timing-function: ease-in;
@@ -135,7 +163,7 @@ img[target=two] {
   position: absolute;
   -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
-  left: 50px;
+  left: 180px;
 }
 
 img[target=three] {
@@ -148,8 +176,9 @@ img[target=three] {
   position: absolute;
   -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
-  right: 0px;
-  bottom: 30px;
+  right: 22px;
+  top:80px;
+  height: 60px;
 }
 
 img[target=four] {
@@ -162,8 +191,9 @@ img[target=four] {
   position: absolute;
   -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
-  left: 100px;
-  bottom: 20px;
+  left: 50px;
+  height: 50px;
+  /* bottom: 20px; */
   -webkit-animation-timing-function: cubic-bezier(0, 0, 1, 1);
           animation-timing-function: cubic-bezier(0, 0, 1, 1);
 }
@@ -178,7 +208,9 @@ img[target=five] {
   position: absolute;
   -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
-  top: 200px;
+  top: 250px;
+  height: 40px;
+  left: 40px;
 }
 
 img[target=six] {
@@ -191,8 +223,8 @@ img[target=six] {
   position: absolute;
   -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
-  right: 100px;
-  bottom: 20px;
+  right: 10px;
+  height: 50px;
 }
 
 
